--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
     "private": true,
     "type": "module",
+    "engines": {
+        "node": ">=18.18.0",
+        "npm": ">=9"
+    },
     "scripts": {
         "dev": "vite",
         "build": "vite build"
